# EDAhelper

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  example_column_stats.ipynb  example_numeric_plots.ipynb  example_plot_histogram.ipynb  example_preprocess.ipynb  index.md  make.bat
src/DSCI_524_Group_5/: __init__.py
src/EDAhelper/: EDAhelper.py  __init__.py  column_stats.py  numeric_plots.py  plot_histogram.py
tests/: data_preprocess.csv  test_DSCI_524_Group_5.py  test_EDAhelper.py  test_column_stats.py  test_numeric_plots.py  test_plot_histogram.py
