[tool.poetry]
name = "EDAhelper"
version = "0.1.0"
description = "Toolset to make EDA easier!"
authors = ["Rowan Sivanandam, Steven Leung, Vera Cui, Jennifer Hoang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
jupyter = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
