[tool.poetry]
name = "EDAhelper"
version = "3.1.6"
description = "Toolset to make EDA easier!"
authors = ["Rowan Sivanandam, Steven Leung, Vera Cui, Jennifer Hoang"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UBC-MDS/EDAhelper.git"
documentation = 'https://edahelper.readthedocs.io'
packages = [
    { include="EDAhelper", from="./src" },
]

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
jupyter = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.4.0"
nbsphinx = "^0.8.8"
ipykernel = "^6.7.0"
codecov = "^2.1.12"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # upload to release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
